# rdmo-plugins-docx-export

./: README.md  pyproject.toml
src/rdmo_docx_export/exports/: __init__.py  horizon-europe.py  horizon_europe.py
src/rdmo_docx_export/exports/templates/: horizon-template.docx
